package src.main;

public class MailSender {
  public void send(String adress, String messaje){
    //mandar mail
  }
}
