package src.main;

public class NotificationService {
  public void notify(String text){
    //notificar
  }
}
